Bug 29752 - [Ironlake] EFAULT during pwrite (ShmPixmap?)
Summary: [Ironlake] EFAULT during pwrite (ShmPixmap?)
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-23 06:06 UTC by Sergey Samokhin
Modified: 2010-12-05 14:38 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Xorg.0.log (27.50 KB, text/plain)
2010-08-23 06:07 UTC, Sergey Samokhin
no flags Details
"dmesg" output (40.63 KB, text/plain)
2010-08-23 06:08 UTC, Sergey Samokhin
no flags Details
"xrandr --verbose" output (4.04 KB, text/plain)
2010-08-23 06:09 UTC, Sergey Samokhin
no flags Details
"sudo lspci -vv -nn" output (32.12 KB, text/plain)
2010-08-23 06:10 UTC, Sergey Samokhin
no flags Details
"uname -a" output (138 bytes, text/plain)
2010-08-23 06:11 UTC, Sergey Samokhin
no flags Details

Description Sergey Samokhin 2010-08-23 06:06:02 UTC
Sometimes while playing some flash videos I see errors on stdout of Xorg:

intel_bufmgr_gem.c:1169: Error writing data to buffer 770: (0 706560) Bad address .

System environment:

chromium 5.0.375.127
flashplugin 10.1.82.76
chipset: GMA 5700MHD
system-architecture: 32-bit (i686)
xf86-video-intel: 2.12.0
intel-dri: 7.8.2
xorg-server 1.8.1.902
libgl: 7.8.2
libdrm: 2.4.21
kernel: 2.6.35.3
linux distribution: archlinux i686 current
machine or mobo model: Lenovo ThinkPad T510 NTF6WRT
display connector: none

Steps to reproduce:

1. Open chromium (I can't reproduce the problem in FireFox)
2. Go to http://www.tvigle.ru/category/cinema/serdce?video=477593
3. Start watching the great movie "Heart of a Dog"
4. Change the quality of the playing movie to HQ and then to SQ some times:
   4.a click on "КАЧЕСТВО" ("QUALITY" in Russian) player button (which is located right after the player's volume control)
   4.b click on HQ or SQ
5. Take a look at standard output of Xorg: you'll see a lot of errors like the one at the beginning of the bug report.
Comment 1 Sergey Samokhin 2010-08-23 06:07:40 UTC
Created attachment 38094 [details]
Xorg.0.log
Comment 2 Sergey Samokhin 2010-08-23 06:08:35 UTC
Created attachment 38095 [details]
"dmesg" output
Comment 3 Sergey Samokhin 2010-08-23 06:09:30 UTC
Created attachment 38096 [details]
"xrandr --verbose" output
Comment 4 Sergey Samokhin 2010-08-23 06:10:29 UTC
Created attachment 38097 [details]
"sudo lspci -vv -nn" output
Comment 5 Sergey Samokhin 2010-08-23 06:11:21 UTC
Created attachment 38098 [details]
"uname -a" output
Comment 6 Chris Wilson 2010-12-05 14:38:19 UTC
commit e8f41c371024e2f3845c7652b22af8f5900200f2
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sun Dec 5 21:37:23 2010 +0000

    uxa: Prevent reading past the last byte on upload/download
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=29752
    Reported-by: Sergey Samokhin <prikrutil@gmail.com>
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.